# shuttlings

./: LICENSE  README.md
_shuttlings/: Cargo.toml
_shuttlings/src/: lib.rs
cch23/: README.md
cch23/challenges/: -1.md  1.md  11.md  12.md  13.md  14.md  15.md  18.md  19.md  20.md  21.md  22.md  4.md  5.md  6.md  7.md  8.md
cch23/validator/: Cargo.toml  README.md
cch23/validator/assets/: cookiejar.tar  lottery.tar  northpole20231220.tar  numbers.txt
cch23/validator/src/: args.rs  lib.rs  main.rs
cch24/: README.md
cch24/challenges/: -1.md  12.md  16.md  19.md  2.md  23.md  5.md  9.md
cch24/validator/: Cargo.toml  README.md
cch24/validator/assets/: 23.html  day16_santa_public_key.pem
cch24/validator/src/: args.rs  lib.rs  main.rs
