[package]
name = "cch23-validator"
description = "Validate solutions to challenges from Shuttle's Christmas Code Hunt 2023"
homepage = "https://www.shuttle.rs/cch"
repository = "https://github.com/shuttle-hq/shuttlings"
authors = ["Santa"]
version = "22.0.1"
edition = "2021"
license = "MIT"
publish = true

[dependencies]
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["clock", "serde"] }
clap = { version = "4.4.11", features = ["derive", "cargo"] }
futures-util = "0.3.29"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
shuttlings = "0.1.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls"] }
tracing = "0.1.40"
uuid = "1.5.0"
