[package]
name = "cch23-validator"
description = "Validate solutions to challenges from Shuttle's Christmas Code Hunt 2023"
homepage = "https://www.shuttle.rs/cch"
repository = "https://github.com/shuttle-hq/shuttlings"
authors = ["Santa"]
version = "22.0.4"
edition = "2021"
license = "MIT"
publish = true

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "cargo"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttlings = "0.1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1.40"
uuid = "1.5"
