[package]
name = "cch24-validator"
description = "Validate solutions to challenges from Shuttle's Christmas Code Hunt 2024"
homepage = "https://www.shuttle.dev/cch"
repository = "https://github.com/shuttle-hq/shuttlings"
authors = ["Santa"]
version = "23.0.1"
edition = "2021"
license = "MIT"
publish = true

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "cargo"] }
html-compare-rs = "0.3.0"
jsonwebtoken = { version = "9.3.0", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shuttlings = "0.1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = "1"
